--- a/src/components/booksItem/booksItem.scss
+++ b/src/components/booksItem/booksItem.scss
@@ -4,23 +4,28 @@
         display: flex;
         flex-direction:column;
         align-items: center;
+        justify-content: center;
         &:hover {
             text-decoration: none;
             color:#000;
         }
-
     }
     &__img {
-        width:150px;
         img {
-            width:100%;
+            width:150px;
+            height:220px;
+            box-shadow: 6px 6px 10px #676767;
         }
     }
     &__title {
-        margin: 0;
+        text-align: center;
         font-size: 18px;
+    }
+    &__category {
+        margin-top: 20px;
     }
     &__author {
         color:#676767;
+        text-align: center;
     }
 }
