--- a/src/components/searchPanel/searchPanel.scss
+++ b/src/components/searchPanel/searchPanel.scss
@@ -1,6 +1,15 @@
 .search {
     background: url(./bg1.jpg) center center / cover no-repeat;
     padding:30px 0;
+    height:100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &_active {
+        animation: changeHeight;
+        animation-duration: 1s;
+        height:250px;
+    }
     &__title {
         color:#fff;
         font-size: 40px;
@@ -9,10 +18,11 @@
     &__form {
         margin-top: 20px;
         display: flex;
+        flex-direction: column;
         justify-content:center;
         align-items: center;
     }
-    &__input, &__button, &__select {
+    &__input, &__select {
         border-radius: 5px;
         &:focus {
             outline: none;
@@ -24,18 +34,8 @@
         padding-left: 20px;
         border:2px solid #C8C8C8;
     }
-    &__button {
-        height: 40px;
-        margin-left: 10px;
-        background-color: #7CC576;
-        color:#fff;
-        border:none;
-    }
     &__filter {
         margin-top: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         label {
             margin: 0 10px;
             font-size: 20px;
@@ -45,5 +45,27 @@
     &__select {
         min-width:250px;
         padding:5px;
+    }
+}
+.button {
+    height: 40px;
+    margin-left: 10px;
+    background-color: #7CC576;
+    color:#fff;
+    border:none;
+    border-radius: 5px;
+        &:focus {
+            outline: none;
+        }
+        &:hover {
+            background-color:#93E88B;
+        }
+}
+@keyframes changeHeight {
+    from {
+        height:100vh;
+    }
+    to {
+        height:250px;
     }
 }
