--- a/src/components/pages/booksListPage/booksListPage.scss
+++ b/src/components/pages/booksListPage/booksListPage.scss
@@ -1,10 +1,10 @@
 .booksList {
-    padding: 40px 20px;
+    padding: 0px 20px;
     &__title {
         text-align: center;
+        margin: 40px 0;
     }
     &__wrapper {
-        margin-top: 40px;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         grid-template-rows: auto;
